--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <head>
         <h1>Hola Mundo</h1>
     </head>
-    <a href="/Practicas/Prueba/des.html">ir</a>
+    <a href="./Practicas/Prueba/des.html">ir</a>
     
 </body>
 </html>
