--- a/Practicas/Prueba/des.html
+++ b/Practicas/Prueba/des.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae quod provident animi voluptate minus voluptas reiciendis ea eaque! Quasi nisi delectus dolores ea ipsum odio deserunt, quae at voluptatum reiciendis.</h1>
-    <a href="../Prueba/des.html">ir</a>
+    <a href="./../../index.html">ir</a>
 </body>
 </html>
