--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h1>Hola Mundo</h1>
     </head>
     <a href="./Practicas/Prueba/des.html">ir</a>
-    
+    <button id="btn">Hola</button>
+
+    <script src="./scrips/index.js"></script>
 </body>
 </html>
