--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <head>
         <h1>Hola Mundo</h1>
     </head>
-    <a href="./Practicas/Prueba/des.html">ir</a>
-    <button id="btn">Hola</button>
-
-    <script src="./scrips/index.js"></script>
+    <img src="./img/img.jpg" alt="">
+    <a href="./Proyectos/Prueba/des.html">ir</a>
 </body>
 </html>
