--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preubas</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portafolio | Victor</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <head>
-        <h1>Hola Mundo</h1>
-    </head>
-    <img src="./img/img.jpg" alt="">
-    <a href="./Proyectos/Prueba/des.html">ir</a>
+<body class="bg-gray-50 text-gray-800 font-sans">
+  <header class="bg-black text-white shadow-md">
+    <div class="max-w-6xl mx-auto px-6 py-5 flex justify-between items-center">
+      <h1 class="text-3xl font-extrabold tracking-wide">Mi Portafolio</h1>
+      <nav>
+        <ul class="flex gap-6">
+          <li>
+            <a href="./index.html"
+               class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
+               Inicio
+            </a>
+          </li>
+          <li>
+            <a href="./index.html"
+               class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
+               Proyectos
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="max-w-6xl mx-auto px-6 py-10 text-center h-screen">
+    <p class="text-lg mb-6">
+      Bienvenido a mi portafolio. Aquí encontrarás mis proyectos, ideas y colaboraciones.
+    </p>
+    <a href="./Proyectos/Prueba/des.html"
+       class="inline-block bg-black text-white py-3 px-6 rounded-md hover:bg-gray-800 transition-all duration-300">
+       Ver Proyecto de Prueba
+    </a>
+  </main>
+
+  <footer class="bg-black text-white text-center py-4 mt-10">
+    <p class="text-sm">&copy; 2025 Victor. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
