--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Portafolio | Victor</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body class="bg-gray-50 text-gray-800 font-sans ">
   <header class="bg-black text-white shadow-md">
-    <div class="max-w-6xl mx-auto px-6 py-5 flex justify-between items-center">
-      <h1 class="text-3xl font-extrabold tracking-wide">Mi Portafolio</h1>
-      <nav>
-        <ul class="flex gap-6">
+    <div class="max-w-6xl mx-auto px-6 py-5 flex justify-between items-center grid grid-cols-1 sm:grid-cols-2">
+      <h1 class="text-2xl sm:text-3xl font-extrabold tracking-wide ">Mi Portafolio</h1>
+      <nav class="mt-3 sm:mt-0">
+        <ul class="flex flex-col sm:flex-row sm:gap-6">
           <li>
             <a href="./index.html"
                class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
