Actualizar des.html

--- a/Proyectos/Prueba/des.html
+++ b/Proyectos/Prueba/des.html
@@ -6,7 +6,7 @@
     <title>Pagina</title>
 </head>
 <body>
-    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae quod provident animi voluptate minus voluptas reiciendis ea eaque! Quasi nisi delectus dolores ea ipsum odio deserunt, quae at voluptatum reiciendis.</h1>
+    <h1>este es mi página de prueba </h1>
     <a href="./../../index.html">ir</a>
 </body>
 </html>
