--- a/proyects.html
+++ b/proyects.html
@@ -6,7 +6,7 @@
   <title>Portafolio | Victor</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans ">
+<body class="bg-gray-50 text-gray-800 font-sans">
   <header class="bg-black text-white shadow-md">
     <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 items-center">
       <img class="h-[12vh]" src="./img/Logo.png" alt="">
@@ -29,12 +29,28 @@
     </div>
   </header>
 
-  <main class="max-w-6xl mx-auto px-6 py-10 text-center h-screen">
-    Hola mi nombre es Victor, Soy ingeniero en sistemas computacionales
-    
+  <main class="max-w-6xl mx-auto px-6 py-10 h-screen">
+    <div class="m-4 py-5 rounded-2xl bg-gray-300/70">
+
+        <p class="text-lg mb-6 text-center">
+          Bienvenido a mi portafolio. Aquí encontrarás mis proyectos, ideas y colaboraciones.
+        </p>
+        <div class="p-4 hover:bg-gray-800 hover:text-white grid grid-cols-1 sm:grid-cols-6 ">
+            <img class="h-[12vh]" src="./img/NoImg.jpg"  alt="">
+            <div class="sm:col-span-5">
+                Aprende a programar con arduino
+            </div>
+        </div>
+        <div class=" p-4 hover:bg-gray-800 hover:text-white grid grid-cols-1 sm:grid-cols-6 ">
+            <img class="h-[12vh]" src="./img/NoImg.jpg" alt="">
+            <div class="sm:col-span-5">
+                Personal Dashboard
+            </div>
+        </div>
+    </div>
   </main>
 
-  <footer class="bg-black text-white text-center py-4 mt-10">
+  <footer class="bg-black text-white text-center py-4">
     <p class="text-sm">&copy; 2025 MR. WHITE SOLUTIONS PROGRAMMER. Todos los derechos reservados.</p>
   </footer>
 </body>
