--- a/Cursos/Arduino/indexArduino.html
+++ b/Cursos/Arduino/indexArduino.html
@@ -6,27 +6,27 @@
   <title>Portafolio | Victor</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body class="bg-gray-50 text-gray-800 font-sans ">
   <header class="bg-black text-white shadow-md">
     <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 items-center">
-      <img class="h-[12vh]" src="./img/Logo.png" alt="">
+      <img class="h-[12vh]" src="./../../img/Logo.png" alt="">
       <nav class="mt-3 sm:mt-0 sm:justify-self-end">
         <ul class="flex flex-col sm:flex-row sm:gap-6">
           <li class="my-2 sm:my-0">
-            <a href="./index.html"
+            <a href="./../../index.html"
                class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
                Inicio
             </a>
           </li>
           <li class="my-2 sm:my-0">
-            <a href="./proyects.html"
-               class="py-2 px-4 rounded-md transition-all duration-300 bg-white text-black">
+            <a href="./../../proyects.html"
+               class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
                Proyectos
             </a>
           </li>
           <li class="my-2 sm:my-0">
-            <a href="./cursos.html"
-               class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
+            <a href="./../../cursos.html"
+               class="py-2 px-4 rounded-md transition-all duration-300 bg-white text-black">
                Cursos
             </a>
           </li>
@@ -37,22 +37,15 @@
 
   <main class="max-w-6xl mx-auto px-6 py-10 h-screen">
     <div class="m-6 p-6 rounded-2xl bg-gray-200/70 shadow-lg ">
+      <h2 class="text-2xl font-semibold text-center">¿Qué es arduino?</h2>
+      <p class="py-2">
+        Arduino es una plataforma de desarrollo basada en una placa electrónica de hardware libre que incorpora un microcontrolador re-programable y una serie de pines hembra. Estos permiten establecer conexiones entre el microcontrolador y los diferentes sensores y actuadores de una manera muy sencilla (principalmente con cables dupont) <a href="https://arduino.cl/que-es-arduino/" target="_blank">(Aguayo, 2014)</a>.
+      </p>
 
-        <p class="text-lg mb-6 text-center">
-          Bienvenido a mi portafolio. Aquí encontrarás mis proyectos, ideas y colaboraciones.
-        </p>
-        <a href="./Proyectos/Personal_Dashboard/indexPersonalDashboard.html">
-          <div class=" p-6 hover:shadow-lg shadow-md bg-white rounded-xl transition-shadow duration-300 grid grid-cols-1 sm:grid-cols-6 ">
-              <img class="h-[12vh]" src="./img/NoImg.jpg" alt="">
-              <div class="sm:col-span-5">
-                  Personal Dashboard montado en una raspberry pi que se conecta a un ESP32.
-              </div>
-          </div>
-        </a>
     </div>
   </main>
 
-  <footer class="bg-black text-white text-center py-4">
+  <footer class="bg-black text-white text-center py-4 mt-10">
     <p class="text-sm">&copy; 2025 MR. WHITE SOLUTIONS PROGRAMMER. Todos los derechos reservados.</p>
   </footer>
 </body>
