--- a/cursos.html
+++ b/cursos.html
@@ -6,7 +6,7 @@
   <title>Portafolio | Victor</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body class="bg-gray-50 text-gray-800 font-sans ">
   <header class="bg-black text-white shadow-md">
     <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 items-center">
       <img class="h-[12vh]" src="./img/Logo.png" alt="">
@@ -20,13 +20,13 @@
           </li>
           <li class="my-2 sm:my-0">
             <a href="./proyects.html"
-               class="py-2 px-4 rounded-md transition-all duration-300 bg-white text-black">
+               class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
                Proyectos
             </a>
           </li>
           <li class="my-2 sm:my-0">
             <a href="./cursos.html"
-               class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
+               class="py-2 px-4 rounded-md transition-all duration-300 bg-white text-black">
                Cursos
             </a>
           </li>
@@ -41,18 +41,18 @@
         <p class="text-lg mb-6 text-center">
           Bienvenido a mi portafolio. Aquí encontrarás mis proyectos, ideas y colaboraciones.
         </p>
-        <a href="./Proyectos/Personal_Dashboard/indexPersonalDashboard.html">
-          <div class=" p-6 hover:shadow-lg shadow-md bg-white rounded-xl transition-shadow duration-300 grid grid-cols-1 sm:grid-cols-6 ">
-              <img class="h-[12vh]" src="./img/NoImg.jpg" alt="">
-              <div class="sm:col-span-5">
-                  Personal Dashboard montado en una raspberry pi que se conecta a un ESP32.
-              </div>
-          </div>
+         <a href="./Cursos/Arduino/indexArduino.html">
+            <div class="p-6 hover:shadow-lg shadow-md bg-white rounded-xl transition-shadow duration-300 grid grid-cols-1 sm:grid-cols-6 ">
+                <img class="h-[12vh]" src="./img/NoImg.jpg"  alt="">
+                <div class="sm:col-span-5">
+                    Aprende a programar con arduino
+                </div>
+            </div>
         </a>
     </div>
   </main>
 
-  <footer class="bg-black text-white text-center py-4">
+  <footer class="bg-black text-white text-center py-4 mt-10">
     <p class="text-sm">&copy; 2025 MR. WHITE SOLUTIONS PROGRAMMER. Todos los derechos reservados.</p>
   </footer>
 </body>
