--- a/Cursos/Arduino/indexArduino.html
+++ b/Cursos/Arduino/indexArduino.html
@@ -35,7 +35,7 @@
     </div>
   </header>
 
-  <main class="max-w-6xl mx-auto px-6 py-10 h-screen">
+  <main class="max-w-6xl mx-auto px-0 sm:px-6 py-10 h-screen">
     <div class="m-6 p-6 rounded-2xl bg-gray-200/70 shadow-lg ">
       <h2 class="text-2xl font-semibold text-center">¿Qué es arduino?</h2>
       <p class="py-2">
