--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </header>
 
-  <main class="max-w-6xl mx-auto px-6 py-10">
+  <main class="max-w-6xl mx-auto px-0 sm:px-6 py-10">
 
     <div class="m-6 p-6 rounded-2xl bg-gray-200/70 shadow-lg grid grid-cols-1 sm:grid-cols-2 items-center gap-6">
       <!-- Texto -->
