--- a/Proyectos/Personal_Dashboard/indexPersonalDashboard.html
+++ b/Proyectos/Personal_Dashboard/indexPersonalDashboard.html
@@ -39,7 +39,7 @@
     <div class="m-6 p-6 rounded-2xl bg-gray-200/70 shadow-lg ">
       <h2 class="text-2xl font-semibold text-center"></h2>
       <p class="py-2">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque necessitatibus facilis velit. Porro ipsum sapiente reprehenderit mollitia cumque illo voluptas ratione, iusto quidem deserunt quibusdam necessitatibus quaerat fugiat delectus sit.  
+        222Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque necessitatibus facilis velit. Porro ipsum sapiente reprehenderit mollitia cumque illo voluptas ratione, iusto quidem deserunt quibusdam necessitatibus quaerat fugiat delectus sit.  
       </p>
 
     </div>
