--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio | Victor</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans ">
+<body class="text-gray-800 font-sans ">
   <header class="bg-black text-white shadow-md">
     <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 items-center">
       <img class="h-[12vh]" src="./img/Logo.png" alt="">
