--- a/cursos.html
+++ b/cursos.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio | Victor</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans ">
+<body class="text-gray-800 font-sans ">
   <header class="bg-black text-white shadow-md">
     <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 items-center">
       <img class="h-[12vh]" src="./img/Logo.png" alt="">
@@ -36,7 +37,7 @@
   </header>
 
   <main class="max-w-6xl mx-auto px-0 sm:px-6 py-10 h-screen">
-    <div class="m-6 p-6 rounded-2xl bg-gray-200/70 shadow-lg ">
+    <div class="m-6 p-6 rounded-2xl bg-gray-200/80 shadow-lg ">
 
         <p class="text-lg mb-6 text-center">
           Bienvenido a mi portafolio. Aquí encontrarás mis proyectos, ideas y colaboraciones.
