limitacion de proyect

--- a/proyects.html
+++ b/proyects.html
@@ -42,14 +42,22 @@
         <p class="text-lg mb-6 text-center">
           Bienvenido a mi portafolio. Aquí encontrarás mis proyectos, ideas y colaboraciones.
         </p>
-        <a href="./Proyectos/Personal_Dashboard/indexPersonalDashboard.html">
-          <div class=" p-6 hover:shadow-lg shadow-md bg-white rounded-xl transition-shadow duration-300 grid grid-cols-1 sm:grid-cols-6 ">
+        <a  class="" href="./Proyectos/Personal_Dashboard/indexPersonalDashboard.html">
+          <div class="my-2 p-6 hover:shadow-lg shadow-md bg-white rounded-xl transition-shadow duration-300 grid grid-cols-1 sm:grid-cols-6 ">
               <img class="h-[12vh]" src="./img/NoImg.jpg" alt="">
               <div class="sm:col-span-5">
                   Personal Dashboard montado en una raspberry pi que se conecta a un ESP32.
               </div>
           </div>
         </a>
+        <!--<a class="" href="./Proyectos/Server_Debian/indexDebian.html">
+          <div class="my-2 p-6 hover:shadow-lg shadow-md bg-white rounded-xl transition-shadow duration-300 grid grid-cols-1 sm:grid-cols-6 ">
+              <img class="h-[12vh]" src="./img/NoImg.jpg" alt="">
+              <div class="sm:col-span-5">
+                  De Debian básico a servidor: configuración paso a paso.
+              </div>
+          </div>
+        </a>-->
     </div>
   </main>
 
