--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                Inicio
             </a>
           </li>
-          <li class="my-2 sm:my-0">
+          <!--<li class="my-2 sm:my-0">
             <a href="./proyects.html"
                class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
                Proyectos
@@ -30,7 +30,7 @@
                class="py-2 px-4 rounded-md transition-all duration-300 hover:bg-white hover:text-black">
                Cursos
             </a>
-          </li>
+          </li>-->
         </ul>
       </nav>
     </div>
